--- a/app/src/App.css
+++ b/app/src/App.css
@@ -38,6 +38,17 @@
   font-size: 25px;
 }
 
+.nft-preview-container {
+  margin: 0 auto;
+  padding: 8px;
+  border: 2px solid #efefef;
+}
+
+.nft-preview {
+  width: 400px;
+  height: 400px;
+}
+
 .gradient-text {
   background: -webkit-linear-gradient(left, #60c657 30%, #35aee2 60%);
   background-clip: text;
@@ -62,13 +73,16 @@
   background: -webkit-linear-gradient(left, #ff8867, #ff52ff);
   background-size: 200% 200%;
   animation: gradient-animation 4s ease infinite;
+  width: 300px;
+  margin: 16px auto;
 }
 
 .mint-button {
-  background: -webkit-linear-gradient(left, #4e44ce, #35aee2);
+  background: -webkit-linear-gradient(left, #60c657, #35aee2);
   background-size: 200% 200%;
   animation: gradient-animation 4s ease infinite;
-  margin-left: 10px;
+  width: 300px;
+  margin: 16px auto;
 }
 
 .footer-container {
@@ -93,7 +107,7 @@
   color: white;
 }
 
-.connected-container input[type='text'] {
+.connected-container input[type="text"] {
   display: inline-block;
   padding: 10px;
   width: 50%;
