--- a/app/src/App.css
+++ b/app/src/App.css
@@ -46,13 +46,13 @@
 
 .nft-preview-container {
   margin: 0 auto;
-  padding: 8px;
   border: 2px solid #efefef;
 }
 
 .nft-preview {
   width: 400px;
   height: 400px;
+  margin-bottom: -3px;
 }
 
 .gradient-text {
